# http-server

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
include/: file_handler.h  http_parser.h  http_request.h  http_response.h  server.h
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: file_handler.cpp  http_parser.cpp  http_response.cpp  main.cpp  server.cpp
static/: about.html  index.html
